<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rawati</string>
    <string name="group_name">C22-PS350</string>
    <string name="remember">Remember me</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="welcome">Welcome</string>
    <string name="img_logo">Image Logo</string>
    <string name="from">From</string>
    <string name="msg_fill">Please fill the blank field for start the app</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="loading">Now Loading</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="info">Information</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="logout_success">Logout Success</string>
    <string name="next">Continue</string>

    <string name="dashboard">Dashboard</string>
    <string name="calories_gained">Calories gained</string>


    <string name="activity">Activity</string>
    <string name="add_food">Add Food</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="calories">Calories</string>
    <string name="date">Today</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_calories">0</string>
    <string name="equal">=</string>
    <string name="food">Food</string>
    <string name="food_calories">2500</string>
    <string name="minus">-</string>
    <string name="net_calories">2500</string>
    <string name="next_day">Next Day</string>
    <string name="prev_day">Previous Day</string>

    <string name="add">Add</string>
    <string name="input_food_calories">Food calories</string>
    <string name="input_food_name">Food name</string>
    <string name="input_exercise_duration">Exercise duration (minutes)</string>
    <string name="input_exercise_heart_rate">Exercise heart rate</string>
    <string name="input_exercise_name">Exercise name</string>
    <string name="input_exercise_temp">Body temperature (°C)</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
    <string name="user">User</string>
    <string name="here_s_your_daily_track">Here\'s your daily track</string>
    <string name="wanna_get_recommendation">Wanna get recommendation?</string>
    <string name="your_daily_calories_need">Your daily calories need</string>
    <string name="_0_cal">0</string>
    <string name="_2500_cal">2500</string>
    <string name="foods_you_ate_today">Foods you ate today</string>
    <string name="exercises_you_did_today">Exercises you did today</string>
    <string name="target_bmi">Target BMI</string>
    <string name="target_weight">Target weight</string>
    <string name="current_weight">Current weight</string>
    <string name="current_bmi">Current BMI</string>
    <string name="see_bmi_categories">See BMI categories</string>
    <string name="our_today_recommendation">Our today recommendation</string>
    <string name="keep_up_your_good_work">Keep up your good work!</string>
    <string name="wanna_see_tips">Wanna see tips?</string>
    <string name="see_why">See why?</string>
    <string name="see_how">See how?</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="change_theme">Night Mode</string>
    <string name="change_password">Change Password</string>
    <string name="signout">Signout</string>
    <string name="best_practice_for_you">Best practice for you</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="food_ideas">Food Ideas</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="txt_reset_password">Enter the email associated with your account and we\'ll send an email with intruction to reset your password</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="resetpass_success">We have sent a password recover instruction to your email</string>
    <string name="close">Close</string>
    <string name="reset_failed">Reset password failed</string>
    <string name="error_msg">Error message</string>
    <string name="my_goals">My Goals</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="msg_input_data">Welcome to rawati mobile app, to use the app please input the data first.</string>
    <string name="default_date" tools:ignore="TypographyDashes">2000-01-01</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="woman">Woman</string>
</resources>