<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hello"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/line_vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/line_vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_person"
        android:layout_marginTop="28dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/line_vertical2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_s_your_daily_track"
        android:layout_marginTop="34dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/line_vertical"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/line_vertical2"
        app:layout_constraintStart_toStartOf="@id/line_vertical"
        app:layout_constraintTop_toBottomOf="@id/text_dashboard" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/text_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_gained"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/line_calories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_daily_calories_need"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/line_calories"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1061 Cal"
                android:textSize="18sp"
                android:textColor="@color/orange"
                app:layout_constraintEnd_toEndOf="@id/line_calories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_calories" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wanna_get_recommendation"
                android:textColor="@color/green"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="@id/line_calories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_calories" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:progressTint="@color/orange"
                android:progress="45"
                android:scaleY="2"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line_calories"
                app:layout_constraintTop_toBottomOf="@+id/text_daily" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_cal"
                android:textSize="8sp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2500_cal"
                android:textSize="8sp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <View
                android:id="@+id/line_calories"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_centerVertical="true"
                android:background="@color/greywhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_vertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.92"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>